# TpvSelect

./: .gitignore  README.md  flake.nix
TpvVyber/: Cargo.toml
TpvVyber/backend/: Cargo.toml  diesel.toml
TpvVyber/backend/src/: main.rs  telemetry_conf.rs
TpvVyber/frontend/: Cargo.toml  index.html
TpvVyber/frontend/material-components/: Cargo.toml
TpvVyber/frontend/material-components/src/: icons.rs  lib.rs
TpvVyber/frontend/material-components/src/components/: app_bar.rs  app_bar_container.rs  app_bar_content.rs  button.rs  drawer.rs  drawer_content.rs  drawer_header.rs  list.rs  list_item.rs
TpvVyber/frontend/src/: app.rs  main.rs  routes.rs
TpvVyber/frontend/src/components/: navbar.rs
TpvVyber/frontend/src/layout/: main_layout.rs
TpvVyber/frontend/src/pages/: index.rs  login.rs
