[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = [ "openssl" ] }
openssl = { version = "0.10" }
actix-web-lab = { version = "0.24.3", features = ["spa"] }

oauth2 = "4"            # Google's OAuth2 via the `oauth2` crate
serde = { version = "1.0.228", features = [ "derive" ] }
reqwest = { version = "0.12.24", features = [ "json" ]}
dotenv = "0.15.0"
actix-cors = "0.7.1"
serde_json = "1.0.145"

dotenvy = "0.15.7"
diesel = { version = "2.3.3", features = ["postgres"] }

# --- OpenTelemetry ---
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.15"

# --- Tracing ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.24"
urlencoding = "2.1.3"
