[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = [ "openssl" ] }
openssl = { version = "0.10" }
actix-web-lab = { version = "0.24.3", features = ["spa"] }

oauth2 = "4"            # Google's OAuth2 via the `oauth2` crate
serde = { version = "1.0.228", features = [ "derive" ] }
reqwest = { version = "0.12.24", features = [ "json" ]}
dotenv = "0.15.0"
actix-cors = "0.7.1"
serde_json = "1.0.145"

dotenvy = "0.15.7"
diesel = { version = "2.3.3", features = ["postgres"] }

# --- OpenTelemetry ---
log = { version = "0.4.28", features = ["kv"] }
opentelemetry = "0.24.0"
opentelemetry-appender-log = "0.5.0"
opentelemetry-otlp = { version = "0.17.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-resource-detectors = "0.3.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
actix-web-opentelemetry = { version = "0.19.0", features = ["sync-middleware", "awc"] }
