[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Aplikace na vyber TPV"
readme = "README.md"
repository = "https://github.com/bmw-adam/tpvselect"
license = "Unlicense"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
wasm-bindgen = "0.2.105"
yew-oauth2 = "0.11"
material-components = {version = "*", path = "material-components"}
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
]
